-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.8.0 RC
-
None
-
2afee1c3f13a8dde2ad6d12e62c291e44fff262b
https://codereview.qt-project.org/#/c/176200/
http://testresults.qt.io/logs/qt/qtdeclarative/0d05490f1a95316798fd459c1399d6463a907f6a/LinuxRHEL_6_6x86_64LinuxRHEL_6_6x86_64GCCqtci-linux-RHEL-6.6-x86_64-dc60dcRelease/7904a679f025695c75271539ef6ab51a3060dffd/buildlog.txt.gz
g++ -c -include .pch/Qt5Qml -pipe -O2 -std=c++1y -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -D_REENTRANT -fPIC -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -DWTF_EXPORT_PRIVATE= -DJS_EXPORT_PRIVATE= -DENABLE_ASSEMBLER_WX_EXCLUSIVE=1 -DWTFReportAssertionFailure=qmlWTFReportAssertionFailure -DWTFReportBacktrace=qmlWTFReportBacktrace -DWTFInvokeCrashHook=qmlWTFInvokeCrashHook -DENABLE_LLINT=0 -DENABLE_DFG_JIT=0 -DENABLE_DFG_JIT_UTILITY_METHODS=1 -DENABLE_JIT_CONSTANT_BLINDING=0 -DBUILDING_QT__ -DWTF_USE_UDIS86=0 -DNDEBUG -DQT_BUILD_QML_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -Imemory -I. -Icompiler -I. -I../3rdparty/masm/jit -I../3rdparty/masm/assembler -I../3rdparty/masm/runtime -I../3rdparty/masm/wtf -I../3rdparty/masm/stubs -I../3rdparty/masm/stubs/wtf -I../3rdparty/masm -I../3rdparty/masm/disassembler -I../3rdparty/masm/disassembler/udis86 -Ijit -I. -I.generated -Ijsruntime -I. -Idebugger -Ianimations -I../../include -I../../include/QtQml -I../../include/QtQml/5.8.0 -I../../include/QtQml/5.8.0/QtQml -I/home/qt/work/install/include/QtCore/5.8.0 -I/home/qt/work/install/include/QtCore/5.8.0/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qv4booleanobject.o jsruntime/qv4booleanobject.cpp In file included from jsruntime/qv4object_p.h:53:0, from jsruntime/qv4arrayobject_p.h:53, from jsruntime/qv4arrayobject.cpp:40: /home/qt/work/install/include/QtCore/qglobal.h:112:37: error: ‘is_same’ is not a member of ‘QtPrivate’ # define QT_PREPEND_NAMESPACE(name) ::name ^ jsruntime/qv4managed_p.h:124:5: note: in definition of macro ‘DEFINE_MANAGED_VTABLE_INT’ parentVTable, \ ^ jsruntime/qv4object_p.h:150:43: note: in expansion of macro ‘QT_PREPEND_NAMESPACE’ DEFINE_MANAGED_VTABLE_INT(classname, (QT_PREPEND_NAMESPACE(QtPrivate)::is_same<classname::SuperClass, Object>::value) ? Q_NULLPTR : &classname::SuperClass::static_vtbl.vTable), \ ^ jsruntime/qv4object_p.h:169:1: note: in expansion of macro ‘DEFINE_OBJECT_VTABLE_BASE’ DEFINE_OBJECT_VTABLE_BASE(classname) \ ^ jsruntime/qv4arrayobject.cpp:50:1: note: in expansion of macro ‘DEFINE_OBJECT_VTABLE’ DEFINE_OBJECT_VTABLE(ArrayCtor); ^ /home/qt/work/install/include/QtCore/qglobal.h:112:37: note: suggested alternative: # define QT_PREPEND_NAMESPACE(name) ::name ^ jsruntime/qv4managed_p.h:124:5: note: in definition of macro ‘DEFINE_MANAGED_VTABLE_INT’ parentVTable, \ ^ jsruntime/qv4object_p.h:150:43: note: in expansion of macro ‘QT_PREPEND_NAMESPACE’ DEFINE_MANAGED_VTABLE_INT(classname, (QT_PREPEND_NAMESPACE(QtPrivate)::is_same<classname::SuperClass, Object>::value) ? Q_NULLPTR : &classname::SuperClass::static_vtbl.vTable), \ ^ jsruntime/qv4object_p.h:169:1: note: in expansion of macro ‘DEFINE_OBJECT_VTABLE_BASE’ DEFINE_OBJECT_VTABLE_BASE(classname) \ ^ jsruntime/qv4arrayobject.cpp:50:1: note: in expansion of macro ‘DEFINE_OBJECT_VTABLE’ DEFINE_OBJECT_VTABLE(ArrayCtor); ^ ......