qv4object_p.h: Replace QtPrivate::is_same by std::is_same

Task-number: QTBUG-57007
Change-Id: I05cabe53e7993cd63498334e95917fe6c3077ab6
Reviewed-by: Kai Koehne <kai.koehne@qt.io>