src/qml/jsruntime/qv4object_p.h
@@ -58,8 +58,6 @@
 #include "qv4value_p.h"
 #include "qv4internalclass_p.h"
 
-#include <QtCore/qtypetraits.h>
-
 QT_BEGIN_NAMESPACE
 
 
@@ -147,7 +145,7 @@ struct ObjectVTable
 #define DEFINE_OBJECT_VTABLE_BASE(classname) \
 const QV4::ObjectVTable classname::static_vtbl =    \
 {     \
-    DEFINE_MANAGED_VTABLE_INT(classname, (QT_PREPEND_NAMESPACE(QtPrivate)::is_same<classname::SuperClass, Object>::value) ? Q_NULLPTR : &classname::SuperClass::static_vtbl.vTable), \
+    DEFINE_MANAGED_VTABLE_INT(classname, (std::is_same<classname::SuperClass, Object>::value) ? nullptr : &classname::SuperClass::static_vtbl.vTable), \
     call,                                       \
     construct,                                  \
     get,                                        \
